--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
     "react-spotify-player": "^1.0.4",
+    "react-toastr": "^3.0.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.1",
-    "styled-components": "^4.4.0"
+    "styled-components": "^4.4.0",
+    "toastr": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
