--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.10.1",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.10.1",
+    "react-download-link": "^2.2.0",
     "react-player": "^1.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
