--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.10.1",
     "react-download-link": "^2.2.0",
+    "react-markdown": "^4.2.2",
     "react-player": "^1.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.2",
